--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,7 @@
 {% import "helper.html.twig" as helper %}
 
 {% set openedSidebar = true %}
+{% set hideTitle = true %}
 
 {% set title = 'index.title'|trans %}
 {% block title %}{{ 'index.header.title'|trans }}{% endblock %}
