--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -66,17 +66,12 @@
               </li>
             </ul>
           </div>
-
-          {#<div class="media-right text-nowrap">#}
-          {#<span class="label bg-blue">New</span>#}
-          {#</div>#}
         </li>
       {% endfor %}
     </ul>
   </div>
-
   {% if is_granted('edit', liste) %}
-    <div class="mr-10 pull-right">
+    <div class="mr-10 mb-10 pull-right">
       <a href="{{ path('liste_edit', {'id': liste.id}) }}">
         <button type="button" class="btn bg-primary btn-labeled">
           <b><i class="icon-pencil3"></i></b> {{ 'liste.update'|trans }}
@@ -85,7 +80,7 @@
     </div>
   {% endif %}
   {% if is_granted('edit-details', liste) %}
-    <div class="mr-10 pull-right">
+    <div class="mr-10 mb-10 pull-right">
       <a href="{{ path('liste_edit_details', {'id': liste.id}) }}">
         <button type="button" class="btn bg-primary btn-labeled">
           <b><i class="icon-pencil3"></i></b> {{ 'liste.update_details'|trans }}
@@ -94,13 +89,13 @@
     </div>
   {% endif %}
   {% if is_granted('delete', liste) %}
-    <div class="mr-10 pull-right">
-      <a href="{{ path('liste_delete', {'id': liste.id}) }}">
-        <button type="button" class="btn bg-red btn-labeled">
+    <div class="mr-10 mb-10 pull-right">
+      <a href="{{ path('liste_delete', {'id': liste.id}) }}"
+         onclick="return confirm('{{ 'liste.delete_confirmation'|trans }}');">
+        <button type="button" class="btn bg-danger btn-labeled">
           <b><i class="icon-cross3"></i></b> {{ 'liste.delete'|trans }}
         </button>
       </a>
     </div>
   {% endif %}
-
 {% endblock %}
