fix margin tags

--- a/src/BddBundle/Resources/views/Review/list.html.twig
+++ b/src/BddBundle/Resources/views/Review/list.html.twig
@@ -49,10 +49,10 @@
                 {% if review.pros|length > 0 or review.cons|length > 0 %}
                   <p>
                     {% for pros in review.pros %}
-                      <span class="label label-success label-rounded">{{ pros.name|trans([], 'database') }}</span>
+                      <span class="label label-success label-rounded mb-5">{{ pros.name|trans([], 'database') }}</span>
                     {% endfor %}
                     {% for cons in review.cons %}
-                      <span class="label label-danger label-rounded">{{ cons.name|trans([], 'database') }}</span>
+                      <span class="label label-danger label-rounded mb-5">{{ cons.name|trans([], 'database') }}</span>
                     {% endfor %}
                   </p>
                 {% endif %}
