--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -166,7 +166,8 @@
                   {% if review.pros|length > 0 or review.cons|length > 0 %}
                     <p>
                       {% for pros in review.pros %}
-                        <span class="label label-success label-rounded mb-5">{{ pros.name|trans([], 'database') }}</span>
+                        <span
+                            class="label label-success label-rounded mb-5">{{ pros.name|trans([], 'database') }}</span>
                       {% endfor %}
                       {% for cons in review.cons %}
                         <span class="label label-danger label-rounded mb-5">{{ cons.name|trans([], 'database') }}</span>
@@ -181,8 +182,6 @@
                   {% endif %}
                   {% if is_granted('ROLE_USER') and app.user.id == review.user.id %}
                     <ul class="list-inline list-inline-separate text-size-small">
-                      {#<li>114 <a href="#"><i class="icon-arrow-up22 text-success"></i></a><a href="#"><i#}
-                      {#class="icon-arrow-down22 text-danger"></i></a></li>#}
                       <li>
                         <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
                           Modifier mon avis
