--- a/src/BddBundle/Resources/views/Search/index.html.twig
+++ b/src/BddBundle/Resources/views/Search/index.html.twig
@@ -6,61 +6,7 @@
 {% set pageHasFilters = true %}
 
 {% block secondary_sidebar %}
-  <div class="sidebar sidebar-secondary sidebar-default">
-    <div class="sidebar-content">
-      <form action="#">
-        {% if is_granted('ROLE_USER') %}
-          <input name="filters[user]" type="hidden" value="{{ app.user.id }}">
-        {% endif %}
-        <input id="form-latitude" name="filters[latitude]" type="hidden">
-        <input id="form-longitude" name="filters[longitude]" type="hidden">
-        <!-- Sidebar search -->
-        <div class="sidebar-category">
-          <div class="category-content">
-            <div class="form-group">
-              <input type="text" class="form-control" name="filters[name]"
-                     placeholder="Name"
-                     onkeyup="filterData();">
-            </div>
-            <div class="form-group">
-              <select class="form-control" name="filters[openingDate]" onchange="filterData();">
-                <option value="">{{ 'map_index.filter.openingDate'|trans }}</option>
-                {% for filter in filtersForm.openingDate %}
-                  <option value="{{ filter.year }}">{{ filter.year }}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="form-group">
-              <select class="form-control" name="filters[score]" onchange="filterData();">
-                <option value="">{{ 'map_index.filter.score'|trans }}</option>
-                {% for i in range(10, 90, 10) %}
-                  <option value="{{ i }}">{{ 'map_index.filter.atleast'|transchoice(i) }}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="form-group">
-              <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
-                <label class="display-block">
-                  {{ 'map_index.filter.notridden'|trans }}
-                  <input name="filters[notridden]" type="checkbox" class="switchery"
-                         onchange="filterData();"
-                         {% if not is_granted('ROLE_USER') %}disabled="disabled"{% endif %}>
-                </label>
-              </div>
-            </div>
-            <div class="form-group">
-              <select class="form-control" name="filters[manufacturer]" onchange="filterData();">
-                <option value="">Manufacturer</option>
-                {% for filter in filtersForm.manufacturer %}
-                  <option value="{{ filter.id }}">{{ filter.name }}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
+  {% include '@Bdd/Includes/filter_sidebar.html.twig' with {'filters': filters, 'filtersForm': filtersForm} only %}
 {% endblock %}
 
 {% block body %}
@@ -68,46 +14,55 @@
 {% endblock %}
 
 {% block javascripts %}
+  <script type="text/javascript" src="{{ asset('js/plugins/switchery.min.js') }}"></script>
   <script type="text/javascript">
-      if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function (position) {
-              $("#form-latitude").val(position.coords.latitude);
-              $("#form-longitude").val(position.coords.longitude);
-              filterData();
-          }, function (position) {
-              console.log(position);
-              filterData();
-          });
-      } else {
-          filterData();
-      }
+    var elems = Array.prototype.slice.call(document.querySelectorAll('.switchery'));
+    elems.forEach(function(html) {
+      var switchery = new Switchery(html);
+      html.addEventListener('click', function() {
+        filterData();
+      })
+    });
+  </script>
+  <script type="text/javascript">
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        $('#form-latitude').val(position.coords.latitude);
+        $('#form-longitude').val(position.coords.longitude);
+        filterData();
+      }, function(position) {
+        console.log(position);
+        filterData();
+      });
+    } else {
+      filterData();
+    }
 
-      function filterData() {
-          var url = Routing.generate('search_coasters_ajax', {'_locale': '{{ app.request.locale }}'});
-          $.ajax({
-              url: url,
-              type: "GET",
-              data: $("form").serialize()
-          }).done(function (data) {
-              $('#search-result').html(data);
-              ajaxPager();
-          });
-      }
+    function filterData() {
+      $.ajax({
+        url: Routing.generate('search_coasters_ajax', {'_locale': '{{ app.request.locale }}'}),
+        type: 'GET',
+        data: $('form').serialize(),
+      }).done(function(data) {
+        $('#search-result').html(data);
+        ajaxPager();
+      });
+    }
 
-      var ajaxPager = function () {
-          $("ul.pagination a").click(function (e) {
-              e.preventDefault();
-              var pageUrl = $(this).attr('href');
+    var ajaxPager = function() {
+      $('ul.pagination a').click(function(e) {
+        e.preventDefault();
+        var pageUrl = $(this).attr('href');
 
-              $.ajax({
-                  url: pageUrl,
-                  type: 'GET',
-                  dataType: 'html'
-              }).done(function (data) {
-                  $('#search-result').html(data);
-                  ajaxPager();
-              });
-          });
-      };
+        $.ajax({
+          url: pageUrl,
+          type: 'GET',
+          dataType: 'html',
+        }).done(function(data) {
+          $('#search-result').html(data);
+          ajaxPager();
+        });
+      });
+    };
   </script>
 {% endblock %}
