--- a/src/BddBundle/Resources/views/Includes/filter_sidebar.html.twig
+++ b/src/BddBundle/Resources/views/Includes/filter_sidebar.html.twig
@@ -31,6 +31,7 @@
               </label>
             </div>
           </div>
+          {% if filters.ridden is not defined %}
           <div class="form-group">
             <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
               <label class="display-block">
@@ -41,6 +42,7 @@
               </label>
             </div>
           </div>
+          {% endif %}
           <div class="form-group">
             <input type="text" class="form-control" name="filters[name]"
                    placeholder="{{ 'map_index.filter.name'|trans }}"
