--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -92,7 +92,11 @@
           </ul>
           <ul class="list-inline list-inline-separate text-muted mb-5">
             <li>{{ coaster.builtCoaster.manufacturer.name }}</li>
-            <li>{{ coaster.builtCoaster.types|join(', ') }}</li>
+            {% if coaster.maTerialType %}
+              <li>{{ coaster.materialType }}</li>{% endif %}
+            {% if coaster.builtCoaster.types|length > 0 %}
+              <li>{{ coaster.builtCoaster.types|join(', ') }}</li>
+            {% endif %}
           </ul>
         </div>
         <div class="media-right text-center">
